# simple-http-server-5k

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
examples/: CMakeLists.txt  simple-chat-server.cpp
src/: CMakeLists.txt  constants.hpp  log.hpp  tcp-server.cpp  tcp-server.hpp
src/sockets/: epoll-socket.cpp  epoll-socket.hpp  isocket.hpp
src/utils/: thread-pool.cpp  thread-pool.hpp
test-client/: index.js  package-lock.json  package.json
tests/: CMakeLists.txt  tcp-server_spec.cpp
tests/_helpers/: helpers.hpp
tests/utils/: thread-pool_spec.cpp
